ingress-svc-deployment/compact-with-proxy-conf.yaml
apiVersion: v1
kind: Service
metadata:
  name: site2-service
spec:
  selector:
    app: site2
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site2
spec:
  selector:
    matchLabels:
      app: site2
  replicas: 2
  template:
    metadata:
      labels:
        app: site2
    spec:
      containers:
      - name: site2
        image: linuxgeekup/html-website:vtag1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "50s"
    nginx.org/client-max-body-size: "150m"
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"

  name: sonarqube-ingress
  namespace: default
spec:
  rules:
    - host: mywebsite.gcp-deploy.com
      http:
        paths:
          - backend:
              service:
                name: site2-service
                port:
                  number: 80
            #path: /api/test(/|$)(.*)
            path: /
            pathType: ImplementationSpecific
