ingress-svc-deployment/jenkinsdeployment-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jm
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
    - host: www.example.org
      http:
        paths:
          - path: /
            backend:
              serviceName: example
              servicePort: 80
    - host: jenkins.example.org
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 80
