ingress-svc-deployment/rewrite-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "50s"
    nginx.org/client-max-body-size: "150m"
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    nginx.ingress.kubernetes.io/rewrite-target: /

  name: site3-ingress
  namespace: default
spec:
  rules:
    - host: gcp-deploy.com
      http:
        paths:
          - backend:
              service:
                name: site3-service
                port:
                  number: 80
            #path: /api/test(/|$)(.*)
            path: /abc
            pathType: ImplementationSpecific
